# clockapp

./: CMakeLists.txt  README.md
src/: App.cpp  App.h  DWriteEngine.cpp  DWriteEngine.h  DrawInfo.h  ResourceMonitor.cpp  ResourceMonitor.h  main.cpp
